--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Administração - Centro de Compras</title>
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="stylesheet" href="/style.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous"
+  />
 </head>
 <body>
   <header>
@@ -17,16 +20,16 @@
     <div class="container admin-container">
       <section class="form-section">
         <h2>Adicionar/Editar Produto</h2>
-        <form id="produto-form">
-          <input type="hidden" id="produto-id" name="id">
+        <form id="produto-form" enctype="multipart/form-data">
+          <input type="hidden" id="produto-id" name="id" />
           <label for="nome">Nome:</label>
-          <input type="text" id="nome" name="nome" required>
+          <input type="text" id="nome" name="nome" required />
           <label for="descricao">Descrição:</label>
           <textarea id="descricao" name="descricao"></textarea>
           <label for="preco">Preço:</label>
-          <input type="number" id="preco" name="preco" step="0.01" required>
+          <input type="number" id="preco" name="preco" step="0.01" required />
           <label for="imagens">Imagens:</label>
-          <input type="file" id="imagens" name="imagens" accept="image/*" multiple>
+          <input type="file" id="imagens" name="imagens" accept="image/*" multiple />
           <div id="imagens-preview"></div>
           <label for="categoria">Categoria:</label>
           <select id="categoria" name="categoria" required>
@@ -56,7 +59,7 @@
             <option value="alibaba">Alibaba</option>
           </select>
           <label for="link">Link do Produto:</label>
-          <input type="url" id="link" name="link" required>
+          <input type="url" id="link" name="link" required />
           <button type="submit">Salvar Produto</button>
           <button type="button" id="cancelar-edicao" style="display: none;">Cancelar Edição</button>
           <p id="feedback"></p>
@@ -68,21 +71,15 @@
       </section>
     </div>
   </main>
+
   <script>
     const API_BASE_URL = 'https://minha-api-produtos.onrender.com';
 
     document.addEventListener('DOMContentLoaded', () => {
-      // Manipulador de erro para imagens
-      document.querySelectorAll('img').forEach(img => {
-        img.onerror = () => {
-          console.log(`Erro ao carregar imagem: ${img.src}`);
-          img.src = '/imagens/placeholder.jpg';
-        };
-      });
-
-      // Pré-visualização de imagens
       const imagensInput = document.getElementById('imagens');
       const imagensPreview = document.getElementById('imagens-preview');
+
+      // Preview das imagens selecionadas no input
       imagensInput.addEventListener('change', () => {
         imagensPreview.innerHTML = '';
         Array.from(imagensInput.files).forEach(file => {
@@ -96,7 +93,7 @@
         });
       });
 
-      // Carregar lista de produtos
+      // Função para carregar lista de produtos
       async function carregarProdutos() {
         const produtosLista = document.getElementById('produtos-lista');
         produtosLista.innerHTML = '<p>Carregando...</p>';
@@ -104,11 +101,13 @@
           const response = await fetch(`${API_BASE_URL}/api/produtos`);
           if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
           const { data } = await response.json();
+
           produtosLista.innerHTML = '';
           if (data.length === 0) {
             produtosLista.innerHTML = '<p>Nenhum produto encontrado.</p>';
             return;
           }
+
           data.forEach(produto => {
             const div = document.createElement('div');
             div.className = 'produto-item';
@@ -129,11 +128,10 @@
       // Editar produto
       window.editarProduto = async function(id) {
         try {
-          const response = await fetch(`${API_BASE_URL}/api/produtos?id=${id}`);
-          const { data } = await response.json();
-          const produto = data.find(p => p.id === id);
-          if (!produto) throw new Error('Produto não encontrado');
-          
+          const response = await fetch(`${API_BASE_URL}/api/produtos/${id}`);
+          if (!response.ok) throw new Error('Produto não encontrado');
+          const { data: produto } = await response.json();
+
           document.getElementById('produto-id').value = produto.id;
           document.getElementById('nome').value = produto.nome;
           document.getElementById('descricao').value = produto.descricao || '';
@@ -141,13 +139,19 @@
           document.getElementById('categoria').value = produto.categoria;
           document.getElementById('loja').value = produto.loja;
           document.getElementById('link').value = produto.link;
-          document.getElementById('imagens-preview').innerHTML = produto.imagens.map(img => `<img src="${img}" style="width: 80px; height: 80px; object-fit: contain; margin: 5px;">`).join('');
+
+          // Mostrar imagens atuais
+          imagensPreview.innerHTML = produto.imagens.map(img => 
+            `<img src="${img}" style="width: 80px; height: 80px; object-fit: contain; margin: 5px;">`
+          ).join('');
+
           document.getElementById('cancelar-edicao').style.display = 'inline-block';
           document.querySelector('#produto-form button[type="submit"]').textContent = 'Atualizar Produto';
         } catch (error) {
           console.error('Erro ao carregar produto para edição:', error);
-          document.getElementById('feedback').textContent = 'Erro ao carregar produto';
-          document.getElementById('feedback').style.color = 'red';
+          const feedback = document.getElementById('feedback');
+          feedback.textContent = 'Erro ao carregar produto';
+          feedback.style.color = 'red';
         }
       };
 
@@ -157,51 +161,58 @@
         try {
           const response = await fetch(`${API_BASE_URL}/api/produtos/${id}`, { method: 'DELETE' });
           const result = await response.json();
+          const feedback = document.getElementById('feedback');
           if (response.ok) {
-            document.getElementById('feedback').textContent = result.message || 'Produto excluído com sucesso';
-            document.getElementById('feedback').style.color = 'green';
+            feedback.textContent = result.message || 'Produto excluído com sucesso';
+            feedback.style.color = 'green';
             carregarProdutos();
           } else {
-            document.getElementById('feedback').textContent = result.message || 'Erro ao excluir produto';
-            document.getElementById('feedback').style.color = 'red';
+            feedback.textContent = result.message || 'Erro ao excluir produto';
+            feedback.style.color = 'red';
           }
         } catch (error) {
           console.error('Erro ao excluir produto:', error);
-          document.getElementById('feedback').textContent = 'Erro ao conectar com a API';
-          document.getElementById('feedback').style.color = 'red';
+          const feedback = document.getElementById('feedback');
+          feedback.textContent = 'Erro ao conectar com a API';
+          feedback.style.color = 'red';
         }
       };
 
       // Cancelar edição
       document.getElementById('cancelar-edicao').addEventListener('click', () => {
         document.getElementById('produto-form').reset();
-        document.getElementById('imagens-preview').innerHTML = '';
+        imagensPreview.innerHTML = '';
         document.getElementById('produto-id').value = '';
         document.getElementById('cancelar-edicao').style.display = 'none';
-        document.querySelector('#produto-form button[type="submit"]').textContent = 'Adicionar Produto';
+        document.querySelector('#produto-form button[type="submit"]').textContent = 'Salvar Produto';
       });
 
-      // Formulário de adição/atualização de produto
+      // Submissão do formulário (Adicionar ou Atualizar)
       const form = document.getElementById('produto-form');
       form.addEventListener('submit', async (e) => {
         e.preventDefault();
-        const formData = new FormData(form);
+
         const id = document.getElementById('produto-id').value;
         const url = id ? `${API_BASE_URL}/api/produtos/${id}` : `${API_BASE_URL}/api/produtos`;
         const method = id ? 'PUT' : 'POST';
+
+        const formData = new FormData(form);
 
         try {
           const response = await fetch(url, { method, body: formData });
           const result = await response.json();
           const feedback = document.getElementById('feedback');
+
           if (response.ok) {
-            feedback.textContent = result.message || id ? 'Produto atualizado com sucesso' : 'Produto adicionado com sucesso';
+            feedback.textContent = result.message || (id ? 'Produto atualizado com sucesso' : 'Produto adicionado com sucesso');
             feedback.style.color = 'green';
+
             form.reset();
-            document.getElementById('imagens-preview').innerHTML = '';
+            imagensPreview.innerHTML = '';
             document.getElementById('produto-id').value = '';
             document.getElementById('cancelar-edicao').style.display = 'none';
-            document.querySelector('#produto-form button[type="submit"]').textContent = 'Adicionar Produto';
+            document.querySelector('#produto-form button[type="submit"]').textContent = 'Salvar Produto';
+
             carregarProdutos();
           } else {
             feedback.textContent = result.message || 'Erro ao salvar produto';
@@ -209,12 +220,13 @@
           }
         } catch (error) {
           console.error('Erro ao salvar produto:', error);
-          document.getElementById('feedback').textContent = 'Erro ao conectar com a API';
-          document.getElementById('feedback').style.color = 'red';
+          const feedback = document.getElementById('feedback');
+          feedback.textContent = 'Erro ao conectar com a API';
+          feedback.style.color = 'red';
         }
       });
 
-      // Carregar produtos iniciais
+      // Carrega lista inicial de produtos
       carregarProdutos();
     });
   </script>
